Disable module-test in CMakeLists
Comment out module-test includes and subdirectory.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,14 +18,14 @@ set(CMAKE_BUILD_TYPE Release)
 
 include_directories(src)
 include_directories(micro-test)
-include_directories(module-test)
+#include_directories(module-test)
 include_directories(ycsb-test)
 include_directories(twitter-test)
 include_directories(crash-test)
 
 add_subdirectory(src)
 add_subdirectory(micro-test)
-add_subdirectory(module-test)
+#add_subdirectory(module-test)
 add_subdirectory(ycsb-test)
 add_subdirectory(twitter-test)
 add_subdirectory(crash-test)
