--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -37,7 +37,7 @@ target_compile_options(
     "-D_DEBUG"
 )
 
-target_link_libraries(libddckv ${Boost_LIBRARIES} boost_context boost_fiber tbb isal boost_coroutine)
+target_link_libraries(libddckv /usr/local/lib/libboost_context.a ${Boost_LIBRARIES} boost_context boost_fiber tbb isal boost_coroutine)
 # target_link_libraries(libddckv ${Boost_LIBRARIES} boost_context boost_fiber tbb isal boost_coroutine profiler)
 
 add_subdirectory(compute_pool)
