--- a/micro-test/CMakeLists.txt
+++ b/micro-test/CMakeLists.txt
@@ -13,6 +13,8 @@ target_compile_options(
     "-O0"
     # ${CMAKE_CXX_FLAGS_DEBUG}
     "-g"
+    "-fsanitize=address,undefined"
+    -fno-omit-frame-pointer
     "-D_DEBUG"
 )
 
