--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -42,6 +42,8 @@ target_compile_options(
     "-O0"
     # ${CMAKE_CXX_FLAGS_DEBUG}
     "-g"
+    "-fsanitize=address,undefined"
+    -fno-omit-frame-pointer
     "-D_DEBUG"
 )
 
